# Biomni

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTION.md  DETAILS.md  Dockerfile  README.md  blacklist.yaml  docker-compose.yml  license_info.md  monarch.pkl  pyproject.toml  pytest.ini  readme_azure_openai_setup.md  test.py
biomni/: config.py  env_desc.py  env_desc_cm.py  llm.py  utils.py
biomni/agent/: a1.py  function_generator.py  react.py
biomni/biorxiv_scripts/: generate_function.py
biomni/eval/: biomni_eval1.py
biomni/model/: retriever.py
biomni/task/: hle.py  lab_bench.py
biomni/tool/: bioengineering.py  bioimaging.py  cancer_biology.py  cell_biology.py  database.py  genetics.py  genomics.py  glycoengineering.py  immunology.py  lab_automation.py  literature.py  pharmacology.py  pubmed_mcp.py  support_tools.py  synthetic_biology.py  tool_registry.py  tooluniverse_mcp.py
biomni/tool/example_mcp_tools/: tooluniverse_mcp.py
biomni/tool/mcp_tools/: tooluniverse_mcp.py
biomni/tool/schema_db/: monarch_schema_gen.py
biomni/tool/tool_description/: bioengineering.py  bioimaging.py  cancer_biology.py  cell_biology.py  database.py  genetics.py  genomics.py  glycoengineering.py  lab_automation.py  microbiology.py  molecular_biology.py  pathology.py  pharmacology.py  physiology.py  support_tools.py  synthetic_biology.py
biomni/tool/tutorial_db/: pylabrobot_liquid_handling.pkl  pylabrobot_material_handling.pkl
biomni_env/: README.md  bio_env.mac.yml  bio_env.yml  bio_env_py310.yml  environment.yml  fixed_env.mac.yml  fixed_env.yml  new_software_install_hyperimpute_v001.sh  new_software_v004.sh  new_software_v005.sh  new_software_v006.sh  new_software_v007.sh  new_software_v008.sh  setup.sh  setup_path.sh
docs/: Makefile  building_documentation.md  configuration.md  generate_api_docs.py  mcp_integration.md  monarch_integration.md
docs/source/: conf.py  index.rst
mcp_biomni/scripts/: __init__.py  check_and_download_files.py
mcp_biomni/server/: add_resources.py  add_tools.py  blacklist_config.py  server.py
mcp_biomni/wrapper/: config.py  server.py
tests/: __init__.py  conftest.py  test_add_resources.py  test_add_tools.py  test_blacklist_config.py  test_check_and_download_files.py  test_glycoengineering.py  test_query_monarch.py
tutorials/: biomni_101.ipynb
tutorials/examples/: clinicaltrials_example.md  mcp_config.yaml  mcp_example.ipynb  pylabrobot.ipynb  test_mcp_server.py
(+24 files in other folders)
